fix: get all the types checking
